2006-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxDatePicker.m: removed the jsPopup, jsCode and
	calendarPageURL methods. The javascript code is handled by .js
	files as much as possible...

	* UI/WebServerResources/ContactsUI.js,
	UI/WebServerResources/MailerUI.js: adapted to the code refactoring
	in generic.js.

	* UI/WebServerResources/SchedulerUI.js: implemented functions to
	handle the new widgets. XmlHTTPRequest code taken from
	MailerUI.js.

	* UI/WebServerResources/generic.js: put some functions related to
	element selections as methods to HTMLElement and HTMLTableElement.

	* UI/Scheduler/UIxCalAptListView.[hm]: new class designed to
	display the list of appointments (embodies the code-size of
	UIxCalAptListView; answers to the "aptlist" method).

2006-08-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalWeekOverview.m ([UIxCalWeekOverview
	-correctURLAction]): new short action method replacing the method
	below by taking far less code.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -GETAction:]): removed method. Replaced
	with an action in the view-related code.

	* UI/Scheduler/UIxAppointmentEditor.m: invoke
	"stringByEscapingHTMLString" on the resulting value to avoid
	issues with accented characters.
	([-jsCode]): removed method since the javascript code was merged
	into SchedulerUI.js.

2006-08-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/iCalPerson+UIx.m ([iCalPerson +personWithUid:]):
	new class method that returns an iCalPerson based on the UID given
	as param.

	* UI/Contacts/UIxContactsListViewContainerBase.m: 
	UIxContactsListViewContainer renamed to serve as a base class for
	the contact lists in both the contact editor and the contact
	selectors.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	-LDAPSetHostname:setPort:setBindDN:setBindPW:setContactIdentifier:
	setUserIdentifier:setRootDN:]): an LDAP field specifying the