@@ -1,5 +1,8 @@
 2006-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Scheduler/NSCalendarDate+Scheduler.[hm]: category code
+	extracted from UIxCalInlineMonthOverview.m.
+
 	* UI/Scheduler/UIxDatePicker.m: removed the jsPopup, jsCode and
 	calendarPageURL methods. The javascript code is handled by .js
 	files as much as possible...
